--- a/beneficios.html
+++ b/beneficios.html
@@ -35,7 +35,7 @@
         </div>
         <div class="subclass2"><!--Texto central + fotos-->
             <article class="textoPrincipal">
-                <h1>Casa de Repouso Santa Clara</h1>
+                <h1>Benefícios das casas de repouso</h1>
                 <p>Foi-se o tempo em que levar o idoso para uma casa de repouso ou até mesmo para um asilo era tratado como sinal de abandono.
                 Nós como familiares na verdade, devemos combater o sentimento natural do ser humano de que entregar o idoso aos cuidados 
                 profissionais em um local fora da sua casa é tratado dessa forma e ao invés de sentir pena ou se sentir mal com essa situação, 
