--- a/contato.html
+++ b/contato.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="contato.css">
     <link rel="stylesheet" href="style.css">
     <title>Casa de Repouso Santa Clara</title>
 </head>
@@ -35,22 +36,29 @@
         </div>
         <div class="subclass2"><!--Texto central + fotos-->
             <article class="textoPrincipal">
-                <h1>Casa de Repouso Santa Clara</h1>
-                <p>Foi-se o tempo em que levar o idoso para uma casa de repouso ou até mesmo para um asilo era tratado como sinal de abandono.
-                Nós como familiares na verdade, devemos combater o sentimento natural do ser humano de que entregar o idoso aos cuidados 
-                profissionais em um local fora da sua casa é tratado dessa forma e ao invés de sentir pena ou se sentir mal com essa situação, 
-                ter em mente que estamos fazendo aquilo que é melhor para a saúde e qualidade de vida do idoso, além de principalmente fazê-lo 
-                entender isso. Hoje, com a maioria das famílias reduzidas, todos tem suas responsabilidades profissionais e com isso existem 
-                dificuldades na dedicação ao idoso, que acaba ficando sozinho em casa correndo riscos por conta de suas limitações.
-                </p>
+                <h1>Fale conosco</h1>
+                <p>Nome</p>
+                <input type="text">
+                <p>Email</p>
+                <input type="text">
+                <p>Telefone</p>
+                <input type="text">
+                <p>Mensagem</p>
+                <input type="text" class="msg">
             </article>
             <div class="fotoC">
                 <div class="fotoCd1"><img src="img/imagecentro1.svg" alt=""></div>
                 <div class="fotoCd2"><img src="img/imagecentro2.svg" alt=""></div>
             </div>
         </div>
-        <section class="fotoDir">
-            
+        <section class="cantodir">
+            <h3>Mapa</h3>
+            <strong><p>Endereço:</p></strong>
+            <p>Av. Nilo Pesanha nº 368</p>
+            <strong><p>Telefones:</p></strong>
+            <p>(21) 99916-1245</p>
+            <p>(21) 2678-2670</p>
+            <p>(21) 3666-2670</p>
         </section>
     </main>
     
