--- a/beneficios.html
+++ b/beneficios.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="beneficios.css">
     <link rel="stylesheet" href="style.css">
     <title>Casa de Repouso Santa Clara</title>
 </head>
@@ -36,21 +37,31 @@
         <div class="subclass2"><!--Texto central + fotos-->
             <article class="textoPrincipal">
                 <h1>Benefícios das casas de repouso</h1>
-                <p>Foi-se o tempo em que levar o idoso para uma casa de repouso ou até mesmo para um asilo era tratado como sinal de abandono.
-                Nós como familiares na verdade, devemos combater o sentimento natural do ser humano de que entregar o idoso aos cuidados 
-                profissionais em um local fora da sua casa é tratado dessa forma e ao invés de sentir pena ou se sentir mal com essa situação, 
-                ter em mente que estamos fazendo aquilo que é melhor para a saúde e qualidade de vida do idoso, além de principalmente fazê-lo 
-                entender isso. Hoje, com a maioria das famílias reduzidas, todos tem suas responsabilidades profissionais e com isso existem 
-                dificuldades na dedicação ao idoso, que acaba ficando sozinho em casa correndo riscos por conta de suas limitações.
-                </p>
+                <div class="blocos">
+                    <div class="numeros">
+                        <img src="img/1.svg" alt="">
+                        <img src="img/2.svg" alt="">
+                        <img src="img/3.svg" alt="">
+                        <img src="img/4.svg" alt="">
+                        <img src="img/5.svg" alt="">
+                    </div>
+                    <div class="linhas">
+                        <div class="linha1"><p>Conta com auxilio de profissionais capacitados</p></div>
+                        <div class="linha2"><p>Promove segurança, conforto e atenção</p></div>
+                        <div class="linha1"><p>Diminui o sentimento de solidão</p></div>
+                        <div class="linha2"><p>Alimentação saudável</p></div>
+                        <div class="linha1"><p>Medicação correta</p></div>
+                    </div>
+                </div>
             </article>
             <div class="fotoC">
-                <div class="fotoCd1"><img src="img/imagecentro1.svg" alt=""></div>
-                <div class="fotoCd2"><img src="img/imagecentro2.svg" alt=""></div>
+                <div class="fotoCd1"><img src="img/bene1.svg" alt=""></div>
+                <div class="fotoCd2"></div>
             </div>
         </div>
-        <section class="fotoDir">
-            
+        <section class="beneficios">
+            <img src="img/bene2.svg" alt="">
+            <img src="img/bene3.svg" alt="">
         </section>
     </main>
     
