--- a/contato.html
+++ b/contato.html
@@ -46,13 +46,13 @@
                 <p>Mensagem</p>
                 <input type="text" class="msg">
             </article>
-            <div class="fotoC">
-                <div class="fotoCd1"><img src="img/imagecentro1.svg" alt=""></div>
-                <div class="fotoCd2"><img src="img/imagecentro2.svg" alt=""></div>
-            </div>
+            
         </div>
         <section class="cantodir">
             <h3>Mapa</h3>
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.2712397716386!2d-43.18598638503443!3d-22.903364285013527!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x997f5d45f8c255%3A0x95b5cc065b0e2759!2sAv.%20Passos%2C%2093%20-%20Centro%2C%20Rio%20de%20Janeiro%20-%20RJ%2C%2020051-040!5e0!3m2!1spt-BR!2sbr!4v1648426822992!5m2!1spt-BR!2sbr" width="300" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
             <strong><p>Endereço:</p></strong>
             <p>Av. Nilo Pesanha nº 368</p>
             <strong><p>Telefones:</p></strong>
