--- a/contato.html
+++ b/contato.html
@@ -45,6 +45,7 @@
                 <input type="text">
                 <p>Mensagem</p>
                 <input type="text" class="msg">
+                <input type="button" value="Enviar" class="botao">
             </article>
             
         </div>
