--- a/estrutura.html
+++ b/estrutura.html
@@ -54,9 +54,9 @@
                     filho do doutor Nicolau. 
                 </p>
             </article>
-            <div class="fotoC">
-                <div class="fotoCd1"><img src="img/imgestr1.svg" alt=""></div>
-                <div class="fotoCd2"><img src="img/imgestr2.svg" alt=""></div>
+            <div class="fotoCe">
+                <div class="fotoCd1e"><img src="img/imgestr1.svg" alt=""></div>
+                <div class="fotoCd2e"><img src="img/imgestr2.svg" alt=""></div>
             </div>
         </div>
         <section class="fotosEstru">
