--- a/sobre.html
+++ b/sobre.html
@@ -21,9 +21,9 @@
                     <li class="listaMenu"><a href="index.html">HOME</a></li>
                     <li><a href="sobre.html">SOBRE</a></li>
                     <li><a href="servico.html">SERVIÇO</a></li>
-                    <li><a href="sobre.html">ESTRUTURA</a></li>
-                    <li><a href="sobre.html">BENEFÍCIOS</a></li>
-                    <li><a href="sobre.html">CONTATO</a></li>
+                    <li><a href="estrutura.html">ESTRUTURA</a></li>
+                    <li><a href="beneficios.html">BENEFÍCIOS</a></li>
+                    <li><a href="contato.html">CONTATO</a></li>
                 </ul>
             </nav>
             <div class="linksM">
